kubernetes/apps/observability/exporters/blackbox-exporter/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: blackbox-exporter
spec:
  description: "Network policy for Blackbox Exporter"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-blackbox-exporter
  ingress:
    # Allow prometheus scraping
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "9115"
              protocol: TCP
  egress:
    # Allow probing all cluster endpoints
    - toEntities:
        - cluster
    # Allow probing external endpoints
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
